--- a/website/app/views/layout/header.html
+++ b/website/app/views/layout/header.html
@@ -29,7 +29,7 @@
         <div class="nav-collapse collapse navbar-responsive-collapse">
 
           <ul class="nav pull-right">
-            <li><a class="top-nav-link trans" href="http://tflig.ht/W5l4CM"><i class="icon icon-download"></i> Get the Manb.ag App!</a></li>
+            <li><a class="top-nav-link trans" href="http://tflig.ht/W5l4CM"><i class="icon icon-cloud-download"></i> Get the App!</a></li>
             <li class="divider"></li>
             <li><a class="top-nav-link trans" href="http://www.getbrandid.com">by BRANDiD</a></li>
           </ul>
