--- a/website/app/views/landing/home.html
+++ b/website/app/views/landing/home.html
@@ -1,9 +1,88 @@
 
 
 <div class="fullscreen center-align clearfix fadeInUp ani">
-  <h1 class="lightest-text center-align text-shadow">Shop. Like a Man.</h1><br/>
-  <h4 class="light-text center-align text-shadow normal-text">Get someone else to do it</h4><br/>
-  <a id="start" class="btn btn-primary btn-large" href="#learn-more">Learn how</a>
+
+  <div class="container bottom-margin">
+    <!-- <div class="row-fluid mobile-padding">
+
+    </div> -->
+    <div class="row-fluid big-top-margin mobile-padding">
+      <div class="featurette">
+        <img class="featurette-image pull-right span6" src="images/landing/pages/main.png">
+
+        <h1 class="lightest-text light-text-drop-shadow">Manbag</h1>
+        <h4 class="lightest-text light-text-drop-shadow">Shop Your Tits Off</h4>
+
+
+        <div class="big-top-margin">
+          <a id="start" class="btn btn-primary btn-large" href="http://tflig.ht/W5l4CM"><i class="icon icon-cloud-download"></i> Download the app</a>
+        </div>
+
+        <div class="top-margin">
+                  <a href="https://twitter.com/manbagapp" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @manbagapp</a>
+                  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                </div>
+
+        <div class="big-top-margin">
+            <h4 class="light-text center-align text-shadow normal-text" style="text-transform:none">We collect all a woman's shopping from the high street & deliver it to their home, so they can shop handsfree.
+
+            <br/><br/><br/>
+            Made for men. <br/><br/><br/>Built in 48hrs at #seedhack by:</h4>
+
+        </div>
+
+
+        <div class="big-top-margin">
+          <div class="row-fluid light-text">
+
+              <div class="row-fluid">
+                <div class="pull-left small-right-margin center-align">
+                  <img src="http://api.twitter.com/1/users/profile_image?screen_name=arush" alt="" class="row-fluid twitter-avatar">
+                  <div style="clear:both;"></div>
+                  <a href="http://www.twitter.com/arush" class="lightest-text row-fluid">@arush</a>
+                </div>
+
+                <div class="pull-left small-right-margin center-align">
+                  <img src="http://api.twitter.com/1/users/profile_image?screen_name=spacenick" alt="" class="row-fluid twitter-avatar">
+                  <div style="clear:both;"></div>
+                  <a href="http://www.twitter.com/spacenick" class="lightest-text row-fluid">@spacenick</a>
+                </div>
+
+                <div class="pull-left small-right-margin center-align">
+                  <img src="http://api.twitter.com/1/users/profile_image?screen_name=thefashioncloud" alt="" class="row-fluid twitter-avatar">
+                  <div style="clear:both;"></div>
+                  <a href="http://www.twitter.com/thefashioncloud" class="lightest-text row-fluid">@thefashioncloud</a>
+                </div>
+
+                <div class="pull-left small-right-margin center-align">
+                  <img src="http://api.twitter.com/1/users/profile_image?screen_name=4nkush" alt="" class="row-fluid twitter-avatar">
+                  <div style="clear:both;"></div>
+                  <a href="http://www.twitter.com/4nkush" class="lightest-text row-fluid">@4nkush</a>
+                </div>
+
+                <div class="pull-left small-right-margin center-align">
+                  <img src="http://api.twitter.com/1/users/profile_image?screen_name=marmelroy" alt="" class="row-fluid twitter-avatar">
+                  <div style="clear:both;"></div>
+                  <a href="http://www.twitter.com/marmelroy" class="lightest-text row-fluid">@marmelroy</a>
+                </div>
+
+
+              </div>
+
+          </div>
+
+
+
+        </div>
+        
+        
+      </div>
+    </div>
+  </div>
+
+    
+
+  
 </div>
 
 <div class="grey-back clearfix row-fluid mobile-padding">
@@ -29,9 +108,8 @@
 
       <div class="row-fluid">
         <div class="featurette">
-          <img class="featurette-image pull-right" src="images/landing/pages/home/choose-brands.png">
-          <h2 class="featurette-heading light-text-drop-shadow"><i class="icon icon-pencil"></i> <span class="small-left-margin">Create a Mission</span><br/><span class="muted">Your clothes. Your brands. Guaranteed.</span></h2>
-          <p class="lead">Give us the data. No need for fashion-speak, just the facts. Help us help you. Capiche?</p>
+          <img class="featurette-image pull-right span4" src="images/landing/pages/1.png">
+          <h2 class="featurette-heading light-text-drop-shadow"><i class="icon icon-shopping-cart"></i> <span class="small-left-margin">Create a new bag drop</span><br/><span class="muted">Leave your bags at the store</span></h2>
         </div>
       </div>
 
@@ -51,12 +129,9 @@
 
       <div class="row-fluid">
         <div class="featurette">
-          <img class="featurette-image pull-left" src="images/landing/pages/home/male-scan.png">
-          <h2 class="featurette-heading light-text-drop-shadow"><i class="icon icon-shopping-cart"></i> <span class="small-left-margin">M.A.L.E. Summons the Shopping Squad</span><br/><span class="muted">He hooks you up with a shopper.
+          <img class="featurette-image pull-left span4" src="images/landing/pages/2.png">
+          <h2 class="featurette-heading light-text-drop-shadow"><i class="icon icon-screenshot"></i> Track your bags in real time, all the time<br/><span class="muted">Your dream hearthrob delivery man collects your bags and delivers them to you
           </span></h2>
-          <p class="lead">M.A.L.E. (Masculine Algorithmic Learning Engine), is your robotic shopping superbrain. He'll hook you up with a shopper and makes sure everything goes to plan.</p>
-          <a href="https://twitter.com/intent/tweet?screen_name=male" class="twitter-mention-button" data-size="large" data-related="BRANDiD">Tweet to @male</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs2");</script>
         </div>
       </div>
 
@@ -78,9 +153,8 @@
       <div class="row-fluid big-bottom-margin">
 
         <div class="featurette">
-          <img class="featurette-image pull-right" src="images/landing/pages/home/email-example.png">
-          <h2 class="featurette-heading light-text-drop-shadow"><i class="icon icon-credit-card"></i> <span class="small-left-margin">Shop. Like a Man.</span><br/><span class="muted">Get six killer options. Buy in seconds.</span></h2>
-          <p class="lead">Your shopper hits you with six killer options, no more, no less. Like what you see? Put it on your tab with one click.<br/><br/>It couldn't be any easier.</p>
+          <img class="featurette-image pull-right span4" src="images/landing/pages/3.png">
+          <h2 class="featurette-heading light-text-drop-shadow"><i class="icon icon-bolt"></i> <span class="small-left-margin">Have a Shopgasm™ when you receive your bags</span><br/><span class="muted">You didn't think we would just leave you hanging, did you?</span></h2>
         </div>
 
       </div>
@@ -88,10 +162,10 @@
     </div> <!-- container -->
 </div> <!-- row-fluid -->
 
-<div class="fullscreen center-align clearfix fadeInUp ani dark-grey-back mobile-padding ">
-  <h1 class="lightest-text center-align text-shadow">Prepare to kick shopping's ass.</h1><br/>
+<div class="big-top-margin big-bottom-margin center-align clearfix fadeInUp ani dark-grey-back mobile-padding ">
+  <h1 class="big-top-margin lightest-text center-align text-shadow">Leave your man at home</h1><br/>
 <!--   <h4 class="light-text center-align text-shadow normal-text">Get someone else to do it</h4><br/> -->
-  <a id="go-to-male" class="btn btn-primary btn-large btn-block max-width-600 top-margin" href="/#/male/intro">Get started now!</a>
+  <a id="go-to-male" class=" big-bottom-margin btn btn-primary btn-large btn-block max-width-600 top-margin" href="http://tflig.ht/W5l4CM"><i class="icon icon-cloud-download"></i> Download the app Now</a>
 </div>
 
 <div class="grey-back clearfix row-fluid mobile-padding">
@@ -99,48 +173,68 @@
 
       <!-- /END THE FEATURETTES -->
       <div class="row-fluid center-align big-top-margin">
-        <h2 class="featurette-heading light-text-drop-shadow">Don't just take our word for it</h2>
-        <a href="https://twitter.com/intent/tweet?screen_name=BRANDiD" class="twitter-mention-button big-top-margin" data-size="large" data-related="male">Tweet to @BRANDiD</a>
+        <h2 class="featurette-heading light-text-drop-shadow">Unofficial Endorsements</h2>
+        <a href="https://twitter.com/intent/tweet?screen_name=manbagapp" class="twitter-mention-button big-top-margin" data-size="large" data-related="male">Tweet to @manbagapp</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs2");</script>
       </div>
-      <div class="twitter clearfix">
-        <div class="quote-box span4or6" ng-repeat="tweet in homeCtrl.displayTweets" ng-class="{'first3': $index%3==0,'last3': $index%3==2, 'even': $index%2==1}">
-          <a href="http://www.twitter.com/{{tweet.user.screen_name}}" class="button-overlay" ng-hide="!tweet.media_url_https">
-            <div class="tweet-img-container">
-              <img src="{{tweet.media_url_https}}" class="scale-with-grid quote-img" alt="{{tweet.user.screen_name}}"/>
-            </div>
-          </a>
-          
+      <div class="twitter clearfix big-bottom-margin">
+
+        <div class="quote-box span4"> 
           <div class="apostrophe"><span>‘</span><span class="apostrophe2">‘</span></div>
           <div class="quote v-outer-container">
             <div class="v-inner-container">
-              <span class="v-aligned-element normal-text italic serif" ng-bind="tweet.text">
+              <span class="v-aligned-element normal-text italic serif">
+                Riddled with sexual innuendo. It's my guilty pleasure.
               </span>
             </div>
           </div>
           <div class="quote-triangle"></div>
           
           <div class="author-container clearfix">
-            <img src="{{tweet.user.profile_image_url_https}}" alt="" class="twitter-avatar">
+            <!-- <img src="{{tweet.user.profile_image_url_https}}" alt="" class="twitter-avatar"> -->
             <div class="author-text-container">
-              <span class="author">@{{tweet.user.screen_name}}</span>
-              <span class="caption-small">{{tweet.created_at_1}}</span>
-              <span class="caption-small">{{tweet.created_at_2}}</span> 
+              <span class="caption-small">Anonymous woman</span>
             </div>
           </div>
         </div> <!-- end ng-repeat -->
-      </div>
-      <div class="load-more-container clearfix row-fluid center-align big-top-margin big-bottom-margin">
-        <a ng-click="getNext(homeCtrl.scrollByNumTweets)" class="btn btn-large btn-inverse more-tweets">Load More...</a>
+        <div class="quote-box span4"> 
+          <div class="apostrophe"><span>‘</span><span class="apostrophe2">‘</span></div>
+          <div class="quote v-outer-container">
+            <div class="v-inner-container">
+              <span class="v-aligned-element normal-text italic serif">
+                I think I just wet myself
+              </span>
+            </div>
+          </div>
+          <div class="quote-triangle"></div>
+          
+          <div class="author-container clearfix">
+            <!-- <img src="{{tweet.user.profile_image_url_https}}" alt="" class="twitter-avatar"> -->
+            <div class="author-text-container">
+              <span class="caption-small">Same anonymous woman</span>
+            </div>
+          </div>
+        </div> <!-- end ng-repeat -->
+        <div class="quote-box span4"> 
+          <div class="apostrophe"><span>‘</span><span class="apostrophe2">‘</span></div>
+          <div class="quote v-outer-container">
+            <div class="v-inner-container">
+              <span class="v-aligned-element normal-text italic serif">
+                I love the way the Shopgasms vibrate. My boyfriend just got fired.
+              </span>
+            </div>
+          </div>
+          <div class="quote-triangle"></div>
+          
+          <div class="author-container clearfix">
+            <!-- <img src="{{tweet.user.profile_image_url_https}}" alt="" class="twitter-avatar"> -->
+            <div class="author-text-container">
+              <span class="caption-small">Man comfortable with his sexuality</span>
+            </div>
+          </div>
+        </div> <!-- end ng-repeat -->
       </div>
 
 
     </div><!-- /.container -->
 </div> <!-- mobile-padding row-fluid -->
-
-<script type="text/javascript">
-  $(document).ready(function() {
-    homePage.center();
-    homePage.bindStuff();
-  });
-</script>
