--- a/website/app/views/layout/footer.html
+++ b/website/app/views/layout/footer.html
@@ -1,11 +1,21 @@
-<footer class="mobile-padding">
+<footer class="mobile-padding big-bottom-margin">
   <div class="container big-top-margin center-align">
-      <div class="row-fluid" style="color:#D8D8D8;">Made in 48hrs at <a href="http://www.seedcamp.com/tags/seedhack">#seedhack</a> by
-        <a href="http://www.twitter.com/arush">@arush</a>,
-        <a href="http://www.twitter.com/spacenick">@spacenick</a>,
-        <a href="http://www.twitter.com/marmelroy">@marmelroy</a>,
-        <a href="http://www.twitter.com/4nkush">@4nkush</a>,
-        <a href="http://www.twitter.com/thefashioncloud">@thefashioncloud</a> for men.
+      <div class="row-fluid light-text">Made in 48hrs at <a href="http://www.seedcamp.com/tags/seedhack">#seedhack</a>
     </div>
+    <div class="row-fluid light-text top-margin">
+      <div class="row-fluid">
+        iOS backend: <a href="http://www.parse.com">Parse</a>
+      </div>
+      <div class="row-fluid top-margin">
+        Node hosting: <a href="http://nodejitsu">nodejitsu</a>
+      </div>
+      <div class="row-fluid top-margin">
+        Javascript: <a href="http://www.angularjs.org">angularjs</a>
+      </div>
+    </div>
+
+    <div class="row-fluid top-margin lightest-text">Want to make kick ass apps with us? Join the <a href="http://workinstartups.com/job-board/job/2433/brandid-beach-villa-hacking-retreat-lean-startup-hackternship-2-positions-remaining-at-brandid/">BRANDiD Beach Villa Retreat Hackternship</a>
+    </div>
+
   </div>
 </div>
